# workbench

./: .babelrc  .containerignore  .editorconfig  .eslintrc.js  .gitignore  .mailmap  .pre-commit-config.yaml  .prettierignore  .travis.yml  :w  AGENTS.md  CODE_OF_CONDUCT.md  Containerfile  LICENSE  README.md  README.rst  SPEC-holidays-in-awt.md  app.js  app.scss  biome.json  check.py  env.py  extract_gettext.py  fabfile.py  manage.py  mise.toml  package.json  postcss.config.js  pyproject.toml  requirements-to-freeze.txt  requirements.txt  rspack.config.js  rspack.library.js  runtests.sh  setup.cfg  tag.sh  tox.ini  webpack.config.bootstrap.js  webpack.config.js  webpack.library.js  (+1 more)
.github/workflows/: codeql-analysis.yml  python-app.yml
absences/: absences.js  index.js  index.scss  utils.js
accounts/: __init__.py  admin.py  backends.py  forms.py  middleware.py  models.py  test_login.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20150228_1035.py  0002_remove_user_date_of_birth.py  0003_auto_20150306_1114.py
activities/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
activities/migrations/: 0001_initial.py  0002_activity_created_at.py  0003_auto_20150302_2300.py  0004_auto_20150306_1114.py  0005_auto_20150320_0936.py  0006_auto_20150323_1720.py
audit/: __init__.py  admin.py  models.py
audit/migrations/: 0001_initial.py  0002_loggedaction.py  0003_auto_20150306_1237.py  0004_auto_20150306_1623.py  0005_auto_20150316_1741.py
conf/: _env  strings.js
config/: paths.js  webpack.common.js  webpack.dev.js  webpack.prod.js
contacts/: __init__.py  admin.py  forms.py  models.py  test_views.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_auto_20150213_1718.py  0003_auto_20150213_1751.py  0004_auto_20150214_2303.py  0005_auto_20150218_1255.py  0006_auto_20150218_1257.py  0007_organization_groups.py  0008_organization_notes.py  0009_auto_20150220_1151.py  0010_auto_20150223_0908.py  0011_auto_20150302_2300.py  0012_auto_20150306_1110.py
deals/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
deals/migrations/: 0001_initial.py  0002_auto_20150330_1429.py  0002_auto_20160904_1105.py  0002_deal_funnel.py  0003_auto_20160924_2201.py  0003_requiredservice.py  0004_auto_20150204_1604.py  0005_auto_20150218_2005.py  0006_auto_20150220_1734.py  0007_auto_20150302_2300.py  0008_auto_20150306_1109.py  0009_auto_20150324_2210.py
ftool/: factories.py  models.py  settings.py  urls.py  views.py  wsgi.py
ftool/migrations/: 0001_initial.py  0002_auto_20150324_2223.py  0002_loggedaction.py  0003_auto_20150306_1237.py
ftool/templates/: base.html  history.html  modalform.html  search.html  site_base.html  start.html
ftool/templatetags/: history.py  mark_current.py  querystring.py
invoices/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
invoices/migrations/: 0001_initial.py  0002_invoice_down_payment_applied_to.py  0002_invoice_stories.py  0003_auto_20150315_1104.py  0003_invoice_created_at.py  0004_auto_20150315_2140.py  0004_auto_20160917_2112.py  0005_auto_20160924_1350.py  0005_search_audit.py  0006_auto_20150320_1507.py  0006_invoice_liable_to_vat.py  0007_auto_20150320_1534.py  0007_auto_20160927_0916.py  0008_invoice_closed_at.py
logbook/: admin.py  forms.py  models.py  urls.py
logbook/migrations/: 0001_initial.py  0002_loggedcost.py  0003_auto_20160924_1350.py  0004_auto_20160924_2201.py  0005_auto_20160925_1706.py
offers/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
offers/migrations/: 0001_initial.py  0002_auto_20150309_1534.py  0002_auto_20160917_2027.py  0003_auto_20150310_1229.py  0003_auto_20160917_2057.py  0004_auto_20150320_1507.py  0004_auto_20160918_1035.py  0005_auto_20150320_1534.py  0005_auto_20160922_2204.py  0006_auto_20160922_2218.py  0006_remove_offer_stories.py  0007_offer_disable_tax.py  0008_auto_20160924_1422.py  0009_auto_20160924_2201.py
planning/: index.js  style.scss
projects/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_auto_20150203_1304.py  0002_auto_20150325_1325.py  0002_auto_20160828_0959.py  0003_auto_20150213_1406.py  0003_auto_20150325_1349.py  0003_auto_20160917_1324.py  0004_auto_20150330_1429.py  0004_auto_20160917_1336.py  0004_delete_projectmanager.py  0005_auto_20150213_2139.py  0005_task_service.py  0006_auto_20160918_1035.py  (+10 more)
requirements/: common.txt  development.txt  production.txt
scripts/: merge_squeeze.py  monthly_squeeze.py  zurich_holidays.py
services/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
specs/: github-cost-allocation-report.md
src/: activities.js  activity.js  createActivity.js  endpoints.js  index.js  oneWindow.js  storage.js  template.html  utils.js
srv/: timer_server.py
stories/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
stuff/: audit.sql  gravatar.txt  migrate-awt.txt  migration.txt  pull_bf_metronom.sh  reversion.txt
timer/: _variables.scss  actions.js  activity.js  activitySettings.js  breakActivity.js  colors.js  createActivity.js  endpoints.js  i18n.js  icons.js  index.js  index.scss  oneWindow.js  reducers.js  store.js  template.html  timer.js  useStoredState.js  utils.js
tmp/: data.json
tools/: audit.sql  deletion.py  formats.py  forms.py  history.py  html.py  models.py  pdf.py  search.py  template.py  urls.py  views.py
workbench/: __init__.py  context_processors.py  factories.py  generic.py  middleware.py  settings.py  test_factories.py  test_history.py  test_redirects.py  test_search.py  test_templatetags.py  test_tools.py  urls.py  views.py  wrappers.py
(+876 files in other folders)
