[project]
name = "workbench"
version = "0.0.1"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "beautifulsoup4>=4.14.3",
  "coverage[toml]>=7.13.3",
  "django>=6.0.2",
  "django-admin-ordering>=0.20",
  "django-authlib>=0.17.2",
  "django-bootstrap5>=26.1",
  "django-colorfield>=0.14",
  "django-cors-headers>=4.9",
  "django-countries>=8.2",
  "django-debug-toolbar>=6.2",
  "django-fast-export>=0.1.1",
  "django-fineforms>=0.7",
  "django-vanilla-views>=3",
  "factory-boy>=3.3.3",
  "granian>=2.7",
  "lxml>=6.0.2",
  "more-itertools>=10.8",
  "now>=0.0.6",
  "pdfdocument>=4",
  "phonenumbers>=9.0.23",
  "pillow>=12.1",
  "psycopg[binary]>=3.3.2",
  "qrbill>=1.2",
  "reportlab>=4.4.9",
  "sentry-sdk<3",
  "speckenv>=6.2",
  "svglib<1.6",
  "time-machine>=3.2",
  "vobject>=0.9.9",
  "xlsxdocument>=1.3.10",
]

[tool.ruff]
target-version = "py314"
preview = true
fix = true
show-fixes = true
lint.extend-select = [
  # flake8-async
  "ASYNC",
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # mmcabe
  "C90",
  # flake8-django
  "DJ",
  "E",
  # pyflakes, pycodestyle
  "F",
  # flake8-boolean-trap
  "FBT",
  # isort
  "I",
  # flake8-no-pep420
  "INP",
  # flake8-gettext
  "INT",
  # flake8-implicit-string-concatenation
  "ISC",
  # flake8-logging
  "LOG",
  # pygrep-hooks
  "PGH",
  # flake8-pie
  "PIE",
  # pylint
  "PLC",
  "PLE",
  "PLW",
  # flake8-return
  "RET",
  # ruff
  "RUF005",
  "RUF006",
  "RUF007",
  "RUF008",
  "RUF009",
  "RUF010",
  "RUF015",
  "RUF016",
  "RUF017",
  "RUF100",
  "RUF200",
  # flake8-slots
  "SLOT",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
  "W",
  # flake8-2020
  "YTT",
]
lint.extend-ignore = [
  # Allow zip() without strict=
  "B905",
  # datetime.date.today is fine
  "DTZ011",
  # No line length errors
  "E501",
  # Mutable class attributes are fine
  "RUF012",
  # Percent-formatting is fine
  "UP031",
]
lint.per-file-ignores."*/migrat*/*" = [
  # Allow using PascalCase model names in migrations
  "N806",
  # Ignore the fact that migration files are invalid module names
  "N999",
]
lint.per-file-ignores."conf/*" = [
  # Allow Python files in conf/ without __init__
  "INP",
]
lint.per-file-ignores."fabfile.py" = [
  # No boolean trap in function definitions in the fabfile
  "FBT002",
]
lint.per-file-ignores."scripts/*" = [
  # Allow Python files in scripts/ without __init__
  "INP",
]
lint.isort.combine-as-imports = true
lint.isort.lines-after-imports = 2
lint.mccabe.max-complexity = 15

[tool.coverage]
run.branch = true
run.omit = [
  "*migrate*",
  "*migrations*",
  "*venv*",
]
report.show_missing = true
report.skip_covered = true

[tool.pyright]
venvPath = ".venv"
venv = "."
