[metadata]
name = workbench-crm
version = attr: workbench.__version__
description = Django-based Agency Software (time tracking, project management, addressbook, offering and invoicing)
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/workbench/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = MIT
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False

[flake8]
exclude = venv,build,docs,.tox,migrate,migrations,node_modules
ignore = E203,W503
max-line-length = 88

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
lines_after_imports = 2
known_django = django
combine_as_imports = True
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[coverage:run]
branch = True
include =
    *factories*
    *test_*
    *workbench*
omit =
    *migrations*
    *venv*

[coverage:report]
skip_covered = True
show_missing = True

[options.packages.find]
exclude =
    tests
    testapp
