[metadata]
name = workbench_crm
version = attr: workbench.__version__
description = Django-based Agency Software (time tracking, project management, addressbook, offering and invoicing)
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/workbench/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = MIT
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    testapp

[coverage:run]
branch = True
include =
    *factories*
    *test_*
    *workbench*
omit =
    *migrations*
    *venv*

[coverage:report]
skip_covered = True
show_missing = True
